	
	- Updated custom code loading verification to allow different hosts for renderer and processor URL's

2008-04-09 - Release Version: 0.0.6.6

	- Enabled loading of custom renderers and processors from third part hosts if explicitly allowed by user

2008-04-09 - Release Version: 0.0.6.5

	- Bugfix for Firebug version 1.05

2008-04-09 - Release Version: 0.0.6.4

	- Updated security model to allow default renderer and processor without explicit action by user
  - Change json data parsing from eval() to json_parse()
  - Misc bug fixes to improve reliability
  - Updated default renderer for server tab
  - Updated data parsing and default renderer and processor to work with new fb() PHP function
  - Implemented sorting of data headers based on numeric index
  - The default processor will now fail gracefully if there is a problem logging the data
	- The log mode string for console messages in the default processor is now case-insensitive

2008-04-07 - Release Version: 0.0.6.3

	- Implemented request processor that is called for every request in the background
	- Renamed headers to start with X-...
	- Added support for Firebug 1.1 (based on 1.1.0b12)	
	- Added current FirePHP version and OS info to update URL

2007-12-07 - Release Version: 0.0.5.26

	- Finished full jQuery support for renderer
	- Bugfix to make FirePHP work when Firebug is detached in its own window

2007-12-05 - Release Version: 0.0.5.24

	- Fixed incompatibility with HTML Validator extension: http://users.skynet.be/mgueury/mozilla/
	- Fixed unique renderer key to allow request scoping in generated HTML for Console and Net panels
	- Bugfix to make FirePHP work in Console panel with Ajax requests

2007-12-04 - Release Version: 0.0.5.23

	- Implemented explicit enable for each host and allowed sites menu & dialog
	- Only send FirePHP accept and user agent headers when firebug is enabled
	- Changed header name from FirePHP-Mask to FirePHP-RendererURL
	- Added support for javascript in the rendered HTML
